Support showing suggestions on the Mac Sad Tab.

Bug: 732864
Change-Id: I6ca9f742b3b41f49d21e1537dd5f566abf29662a